[gd_scene load_steps=3 format=3 uid="uid://bidpt3v3nmqc"]

[ext_resource type="PackedScene" uid="uid://cxgwpxo5yy2gv" path="res://addons/enhanced_input/scenes/action_remap_button.tscn" id="1_tsfo1"]
[ext_resource type="Script" path="res://addons/enhanced_input/scenes/remapping_row.gd" id="1_u7dlw"]

[node name="RemappingRow" type="HBoxContainer"]
script = ExtResource("1_u7dlw")
action_remap_button_scene = ExtResource("1_tsfo1")

[node name="Spacer" type="Control" parent="."]
visible = false
layout_mode = 2
size_flags_horizontal = 3

[node name="ActionRemapButton" parent="." instance=ExtResource("1_tsfo1")]
unique_name_in_owner = true
layout_mode = 2

[node name="RemoveActionEvent" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
text = "Remove"

[connection signal="pressed" from="RemoveActionEvent" to="." method="_on_remove_action_event_pressed"]
